k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-website
  namespace: my-website

spec:
  replicas: 2

  selector:
    matchLabels:
      app: my-website

  template:
    metadata:
      labels:
        app: my-website

    spec:
      containers:
        - name: my-website
          image: 729049749640.dkr.ecr.eu-north-1.amazonaws.com/my-website:v1

          ports:
            - containerPort: 80
