k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-website-ingress
  namespace: my-website

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: my-website-service
                port:
                  number: 80
